--- a/variant_frontend/index.html
+++ b/variant_frontend/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
     <script src="index.js"></script>
     <title>Document</title>
+
+    </div>
     <div class="ui menu">
       <div class="header item">
         VARIANT
@@ -20,14 +22,29 @@
       <a class="item">
         Top Remix Charts
       </a>
+      <a class="item">
+        Discover
+      </a>
     </div>
   </head>
   <body>
+  <div class="homepage">
+
     <div id="main-container">
       <div class="remix-list">
       </div>
     </div>
     </div>
-
+  </div>
   </body>
+  <style>
+    body {background-image: url("background.jpg");
+          background-repeat: no-repeat;
+          background-size: cover;
+          }
+    #main-container {
+      /* background-color: rgba(255,255,255, 0.7); */
+
+    }
+  </style>
 </html>
