--- a/variant_frontend/index.html
+++ b/variant_frontend/index.html
@@ -9,6 +9,7 @@
     <title>Document</title>
 
     </div>
+
     <div class="ui menu">
       <div class="header item">
         VARIANT
@@ -29,7 +30,8 @@
   </head>
   <body>
   <div class="homepage">
-
+    <video autoplay muted loop src="video.mp4">
+            </video>
     <div id="main-container">
       <div class="remix-list">
       </div>
@@ -38,12 +40,39 @@
   </div>
   </body>
   <style>
-    body {background-image: url("background.jpg");
-          background-repeat: no-repeat;
-          background-size: cover;
-          }
+        video {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        min-width: 100%;
+        min-height: 100%;
+        z-index: -1;
+        object-position: center;
+        object-fit: cover;
+      }
+    /* body {background-image: url("new.jpg"); */
+          /* background-repeat: no-repeat; */
+          /* position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 5%;
+          min-width: 100%;
+          min-height: 5%;
+          z-index: -1;
+          object-position: center;
+          object-fit: cover;
+          } */
     #main-container {
-      /* background-color: rgba(255,255,255, 0.7); */
+      position: relative;
+      background: rgba(34,34,34,0.75);
+      z-index: 100;
+      padding: 20px;
+    }
+
+    .ui.menu {background-image: url("navbackground.jpg");
 
     }
   </style>
