--- a/variant_frontend/index.html
+++ b/variant_frontend/index.html
@@ -42,14 +42,15 @@
   <style>
         video {
         position: absolute;
+
         top: 0;
         left: 0;
         width: 100%;
-        height: 100%;
+        height: 60%;
         min-width: 100%;
-        min-height: 100%;
+        min-height: 60%;
         z-index: -1;
-        object-position: center;
+        object-position: center bottom;
         object-fit: cover;
       }
     /* body {background-image: url("new.jpg"); */
@@ -67,9 +68,15 @@
           } */
     #main-container {
       position: relative;
-      background: rgba(34,34,34,0.75);
+      background: rgba(255, 255, 255,0.90);
+      box-shadow: 5px 5px 5px 1px rgba(0,0,0,0.4);
       z-index: 100;
-      padding: 20px;
+      padding: 70px;
+      margin-right: 75px;
+      margin-left: 75px;
+      margin-top: 75px;
+      /* margin-bottom: 30px; */
+
     }
 
     .ui.menu {background-image: url("navbackground.jpg");
