--- a/variant_frontend/index.html
+++ b/variant_frontend/index.html
@@ -10,11 +10,11 @@
 
     </div>
 
-    <div class="ui menu">
+    <div class="ui menu" id="navbar">
       <div class="header item">
         VARIANT
       </div>
-      <a class="item">
+      <a class="item" data-action="add-song">
         Add a Song
       </a>
       <a class="item">
